# knowledge-assistant-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  cache.py  config.py  graph.py  logging.py  main.py  models.py  search.py  server.py  tools.py  utils.py  writer.py
tests/: conftest.py  test_server.py
